feat: implement relevant conversation memory retrieval